--- a/rescat/rescat/MyPage/Storyboard/MyPage.storyboard
+++ b/rescat/rescat/MyPage/Storyboard/MyPage.storyboard
@@ -316,7 +316,7 @@
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="quk-fr-mLl">
                                 <rect key="frame" x="92" y="360" width="273" height="287"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fY9-bH-o5v">
                                     <size key="itemSize" width="250" height="40"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -339,19 +339,19 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Euo-Ab-yIm">
-                                                    <rect key="frame" x="12.5" y="2" width="225" height="36"/>
+                                                    <rect key="frame" x="11.5" y="2" width="227" height="36"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYf-IJ-VeA">
-                                                            <rect key="frame" x="10" y="7.5" width="182" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <rect key="frame" x="10" y="9.5" width="184" height="17"/>
+                                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="14"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSP-Dx-AR9">
-                                                            <rect key="frame" x="197" y="18" width="18" height="0.0"/>
+                                                            <rect key="frame" x="199" y="9" width="18" height="18"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="18" id="3Mv-oc-nm1"/>
-                                                                <constraint firstAttribute="width" secondItem="RSP-Dx-AR9" secondAttribute="height" multiplier="1:1" constant="18" id="NPr-k2-8zy"/>
+                                                                <constraint firstAttribute="height" constant="18" id="NWP-hh-gW2"/>
                                                             </constraints>
                                                             <state key="normal" title="B"/>
                                                             <connections>
@@ -363,7 +363,7 @@
                                                     <constraints>
                                                         <constraint firstItem="RSP-Dx-AR9" firstAttribute="centerY" secondItem="jYf-IJ-VeA" secondAttribute="centerY" id="0Vf-0V-bv6"/>
                                                         <constraint firstAttribute="height" constant="36" id="20O-Ze-h3p"/>
-                                                        <constraint firstAttribute="width" constant="225" id="Dsj-YJ-6xR"/>
+                                                        <constraint firstAttribute="width" constant="227" id="Dsj-YJ-6xR"/>
                                                         <constraint firstItem="jYf-IJ-VeA" firstAttribute="leading" secondItem="Euo-Ab-yIm" secondAttribute="leading" constant="10" id="H6E-Uh-MRU"/>
                                                         <constraint firstAttribute="trailing" secondItem="RSP-Dx-AR9" secondAttribute="trailing" constant="10" id="gMs-Ct-kQb"/>
                                                         <constraint firstItem="RSP-Dx-AR9" firstAttribute="leading" secondItem="jYf-IJ-VeA" secondAttribute="trailing" constant="5" id="ndz-Wz-eZU"/>
@@ -372,7 +372,7 @@
                                                 </view>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="iaD-SZ-7fF" secondAttribute="bottom" id="Djb-fH-HC4"/>
                                             <constraint firstAttribute="trailing" secondItem="iaD-SZ-7fF" secondAttribute="trailing" id="JmS-D9-Pn0"/>
