--- a/rescat/rescat/Sign/Storyboard/Sign.storyboard
+++ b/rescat/rescat/Sign/Storyboard/Sign.storyboard
@@ -34,7 +34,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8hf-ZJ-e3n">
-                                <rect key="frame" x="27" y="342.5" width="321" height="46"/>
+                                <rect key="frame" x="27" y="439" width="321" height="46"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="ZF7-fV-GQP"/>
@@ -86,7 +86,6 @@
                         <color key="backgroundColor" red="0.57927531003952026" green="0.51076531410217285" blue="0.45489174127578735" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="jcD-AJ-qx7" firstAttribute="centerX" secondItem="8hf-ZJ-e3n" secondAttribute="centerX" id="5Cg-ft-yXB"/>
-                            <constraint firstItem="8hf-ZJ-e3n" firstAttribute="centerY" secondItem="WpQ-lw-YkI" secondAttribute="centerY" id="6vg-qq-QJ2"/>
                             <constraint firstAttribute="bottom" secondItem="BBf-Eu-zWA" secondAttribute="bottom" id="84a-pj-c7L"/>
                             <constraint firstItem="8hf-ZJ-e3n" firstAttribute="centerX" secondItem="WpQ-lw-YkI" secondAttribute="centerX" id="C7p-Wh-PUU"/>
                             <constraint firstItem="8hf-ZJ-e3n" firstAttribute="leading" secondItem="jcD-AJ-qx7" secondAttribute="leading" id="CRm-lq-Rth"/>
@@ -95,11 +94,12 @@
                             <constraint firstItem="WpQ-lw-YkI" firstAttribute="trailing" secondItem="BBf-Eu-zWA" secondAttribute="trailing" id="Oi0-5h-9Km"/>
                             <constraint firstItem="BBf-Eu-zWA" firstAttribute="leading" secondItem="WpQ-lw-YkI" secondAttribute="leading" id="R9q-s7-dVE"/>
                             <constraint firstItem="WpQ-lw-YkI" firstAttribute="bottom" secondItem="bf7-dD-1fm" secondAttribute="bottom" constant="46" id="WMX-ID-UWp"/>
-                            <constraint firstItem="8hf-ZJ-e3n" firstAttribute="top" secondItem="5MO-sx-BgI" secondAttribute="bottom" constant="54" id="ZpY-xd-sDa"/>
                             <constraint firstItem="5MO-sx-BgI" firstAttribute="centerX" secondItem="WpQ-lw-YkI" secondAttribute="centerX" id="bRL-vS-Gj9"/>
+                            <constraint firstItem="BBf-Eu-zWA" firstAttribute="top" secondItem="5MO-sx-BgI" secondAttribute="bottom" constant="-288.5" id="djj-ES-ymZ"/>
                             <constraint firstItem="bf7-dD-1fm" firstAttribute="centerX" secondItem="8hf-ZJ-e3n" secondAttribute="centerX" id="e7A-l4-RWc"/>
                             <constraint firstItem="BBf-Eu-zWA" firstAttribute="top" secondItem="UVh-9I-GtN" secondAttribute="top" id="g8s-uM-jK3"/>
                             <constraint firstItem="WpQ-lw-YkI" firstAttribute="trailing" secondItem="jcD-AJ-qx7" secondAttribute="trailing" constant="27" id="i2F-Wz-jW2"/>
+                            <constraint firstItem="jcD-AJ-qx7" firstAttribute="top" secondItem="8hf-ZJ-e3n" secondAttribute="bottom" constant="9" id="uoP-mz-Du0"/>
                             <constraint firstItem="8hf-ZJ-e3n" firstAttribute="trailing" secondItem="jcD-AJ-qx7" secondAttribute="trailing" id="xSs-34-PyE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WpQ-lw-YkI"/>
@@ -126,7 +126,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashBg" translatesAutoresizingMaskIntoConstraints="NO" id="4wS-h2-61E">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="join02" translatesAutoresizingMaskIntoConstraints="NO" id="4wS-h2-61E">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="환영합니다!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dcs-qm-WfL">
@@ -147,11 +147,10 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="MaP-rd-42t">
                                 <rect key="frame" x="24" y="546" width="327" height="46"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RXE-RK-gyb">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RXE-RK-gyb">
                                         <rect key="frame" x="0.0" y="0.0" width="160" height="46"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="16"/>
-                                        <state key="normal" title="나중에 할래요">
+                                        <state key="normal" image="buttonMaybeLater">
                                             <color key="titleColor" red="0.75929373502731323" green="0.66398483514785767" blue="0.59214353561401367" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
                                         <connections>
@@ -604,7 +603,8 @@
     <resources>
         <image name="bgLogin" width="375" height="667"/>
         <image name="buttonJoin" width="320" height="46"/>
-        <image name="splashBg" width="375" height="667"/>
+        <image name="buttonMaybeLater" width="162" height="48"/>
+        <image name="join02" width="375" height="667"/>
         <image name="symbol" width="95" height="93"/>
     </resources>
 </document>
