--- a/rescat/rescat/Adoption/Storyboard/Adoption.storyboard
+++ b/rescat/rescat/Adoption/Storyboard/Adoption.storyboard
@@ -1344,7 +1344,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wnf-ZT-qYm">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doneWait" translatesAutoresizingMaskIntoConstraints="NO" id="Wnf-ZT-qYm">
                                 <rect key="frame" x="0.0" y="309" width="375" height="358"/>
                             </imageView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="edf-6j-AGP">
@@ -1426,7 +1426,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TT6-7Y-wsM">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doneWait" translatesAutoresizingMaskIntoConstraints="NO" id="TT6-7Y-wsM">
                                 <rect key="frame" x="0.0" y="64" width="375" height="358"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gFW-W1-NNB">
@@ -1860,6 +1860,7 @@
     </scenes>
     <resources>
         <image name="buttonRadioOff" width="22" height="22"/>
+        <image name="doneWait" width="375" height="358"/>
         <image name="icCaretakerBadge" width="32" height="32"/>
         <image name="icEtc" width="21" height="21"/>
         <image name="icRemove" width="29" height="29"/>
