--- a/rescat/rescat/MyPage/Storyboard/MyPage.storyboard
+++ b/rescat/rescat/MyPage/Storyboard/MyPage.storyboard
@@ -25,7 +25,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="304"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c5F-4I-ZEq">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mypageNomal" translatesAutoresizingMaskIntoConstraints="NO" id="c5F-4I-ZEq">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="225"/>
                                             <color key="backgroundColor" red="0.95613926649093628" green="0.88637393712997437" blue="0.88235127925872803" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
@@ -272,7 +272,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l91-kn-WsR">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mypageMyLocation" translatesAutoresizingMaskIntoConstraints="NO" id="l91-kn-WsR">
                                 <rect key="frame" x="112.5" y="70" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="l91-kn-WsR" secondAttribute="height" multiplier="1:1" id="jSh-M4-2nd"/>
@@ -347,13 +347,13 @@
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSP-Dx-AR9">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSP-Dx-AR9">
                                                             <rect key="frame" x="199" y="9" width="18" height="18"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="18" id="3Mv-oc-nm1"/>
                                                                 <constraint firstAttribute="height" constant="18" id="NWP-hh-gW2"/>
                                                             </constraints>
-                                                            <state key="normal" title="B"/>
+                                                            <state key="normal" image="icCancleW"/>
                                                             <connections>
                                                                 <action selector="delAction:" destination="qEn-Ez-Lko" eventType="touchUpInside" id="sJP-8R-iJe"/>
                                                             </connections>
@@ -1759,7 +1759,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0kQ-D2-hMF">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mypageAsk" translatesAutoresizingMaskIntoConstraints="NO" id="0kQ-D2-hMF">
                                 <rect key="frame" x="0.0" y="315" width="375" height="352"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gdx-lH-ibX">
@@ -1910,6 +1910,7 @@
     </scenes>
     <resources>
         <image name="btnLocationAdd" width="225" height="36"/>
+        <image name="icCancleW" width="18" height="18"/>
         <image name="icCaretakerBadge" width="32" height="32"/>
         <image name="icEdit" width="24" height="24"/>
         <image name="icExit" width="24" height="24"/>
@@ -1917,5 +1918,8 @@
         <image name="icMypageMoreBeige" width="24" height="24"/>
         <image name="icRenew" width="18" height="18"/>
         <image name="iconCareTakerS" width="21" height="21"/>
+        <image name="mypageAsk" width="375" height="352"/>
+        <image name="mypageMyLocation" width="150" height="150"/>
+        <image name="mypageNomal" width="375" height="225"/>
     </resources>
 </document>
